navbar alignment issue fixed, iguess

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -20,13 +20,23 @@
    
 }
 
+nav{
+   
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-block: 1.5em;
+    margin-right: 10%;
+}
+
 nav ul {
     list-style-type: none;
     padding: 0;
-    margin-left: auto;
+    margin-left: auto;                                                                                                                                                                                         ;
     display: flex;
+    justify-content: space-between;
 }
-
+                                                                                
 nav ul li{
     margin-right: 20px;
 }
@@ -37,4 +47,22 @@ header{
     display: flex;
     align-items: center ;
     justify-content: space-between;
+    width: 100%;
+    padding: 1.5em 0
+}
+.header-container{
+    width: 100%; 
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav-links{
+    display: flex;
+    gap: 2em;
+}
+
+.logo{
+    font-weight: 700;
+    font-size: 1.75rem;
 }
